Adding some files over from jordance to prep the html and css for my design

--- a/index.html
+++ b/index.html
@@ -1,1 +1,70 @@
-Hello, world.
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
+	<title>workremote.design &middot; Job listings for remote design jobs</title>
+	<meta name="description" content="Job listings for remote design jobs.">
+
+	<link rel="icon" type="image/png" href="images/favicon-16.png" sizes="16x16">
+	<link rel="icon" type="image/png" href="images/favicon-32.png" sizes="32x32">
+	<link rel="icon" type="image/png" href="images/favicon-64.png" sizes="64x64">
+	<link rel="icon" type="image/png" href="images/favicon-96.png" sizes="96x96">
+	<link rel="apple-touch-icon" sizes="60x60" href="images/favicon-iphone-60.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="images/favicon-iphone-120.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="images/favicon-iphone-180.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="images/favicon-ipad-72.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="images/favicon-ipad-144.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="images/favicon-ipad-216.png">
+	<link rel="stylesheet" type="text/css" media="all" href="css/reset.css">
+	<link rel="stylesheet" type="text/css" media="all" href="css/style.css">
+	<link rel="stylesheet" type="text/css" media="all" href="css/animate.css">
+
+	<script>
+	</script>
+</head>
+<body>
+
+	<div id="container" class="container spacer"></div>
+
+	<header id="menu">
+		<ul>
+			<li id="chat" class="active">
+				<a href="index.html">
+
+					Chat
+				</a>
+			</li>
+			<li id="about">
+				<a href="about.html">
+					About
+				</a>
+			</li>
+			<li id="contact">
+				<a href="mailto:jordangetsthisemail@gmail.com">
+
+					Contact
+				</a>
+			</li>
+		</ul>
+	</header>
+
+  <main>
+    Hello, world.
+  </main>
+
+  <footer>
+    <ul>
+      <li></li>
+      <li></li>
+      <li>
+        <svg xmlns="http://www.w3.org/2000/svg" data-name="square" viewBox="0 0 24 24"><title>square</title><g data-name="Icon/Square"><rect class="square" x="2" y="2" width="20" height="20"/></g></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" data-name="circle" viewBox="0 0 24 24"><title>circle</title><g data-name="Icon/Circle"><circle class="circle" cx="12" cy="12" r="11"/></g></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" data-name="triangle" viewBox="0 0 24 24"></defs><title>triangle</title><g data-name="Icon/Triangle"><polygon class="triangle" points="12 2 24 22 0 22 12 2"/></g></svg>
+      </li>
+    </ul>
+  </footer>
+
+</body>
+</html>
