defined colors and type. Now beginning layout

--- a/index.html
+++ b/index.html
@@ -28,41 +28,55 @@
 
 	<div id="container" class="container spacer"></div>
 
-	<header id="menu">
+	<header class="menu">
 		<ul>
-			<li id="chat" class="active">
-				<a href="index.html">
-
-					Chat
+			<li id="logo" class="left">
+				<a class="text-l header" href="index.html">
+					workremote.design
 				</a>
 			</li>
-			<li id="about">
-				<a href="about.html">
-					About
-				</a>
-			</li>
-			<li id="contact">
+			<li id="new-listing" class="right text-body">
+				Want to add your listing here?
 				<a href="mailto:jordangetsthisemail@gmail.com">
-
-					Contact
+					Submit new listing
 				</a>
 			</li>
 		</ul>
 	</header>
 
   <main>
-    Hello, world.
+		<div class="hero">
+			<h1 class="align-center">
+				<span class="text-xxxxl">Work from anywhere.</span><br/>
+				<span class="text-xxxl">Find a new remote job in 2020.</span>
+			</h1>
+			<a class="button-primary">Jump to listings</a>
+		</div>
+		<ul id="grid">
+			  <li>
+					  <a href="">
+							  <h2>Job name</h2>
+								<h3>company</h3>
+								<div class="tag">Full Time</div>
+						</a>
+				</li>
+		</ul>
   </main>
 
   <footer>
     <ul>
-      <li></li>
-      <li></li>
+      <li class="text-body">
+				<p>Remote work is a new tool that allows folks to have a better work-life balance, allow different lifestyles, and spread wealth to communities that have been previously underinvested in. As these opportunities come up, I thought it was important to allow more poeple to find these careers with ease.</p>
+				<p>If you have a remote opportunity at your company, <a href="mailto:jordangetsthisemail@gmail.com">drop me an email</a> and I will try to add your listing in a timely manner.</p>
+			</li>
       <li>
-        <svg xmlns="http://www.w3.org/2000/svg" data-name="square" viewBox="0 0 24 24"><title>square</title><g data-name="Icon/Square"><rect class="square" x="2" y="2" width="20" height="20"/></g></svg>
-        <svg xmlns="http://www.w3.org/2000/svg" data-name="circle" viewBox="0 0 24 24"><title>circle</title><g data-name="Icon/Circle"><circle class="circle" cx="12" cy="12" r="11"/></g></svg>
-        <svg xmlns="http://www.w3.org/2000/svg" data-name="triangle" viewBox="0 0 24 24"></defs><title>triangle</title><g data-name="Icon/Triangle"><polygon class="triangle" points="12 2 24 22 0 22 12 2"/></g></svg>
-      </li>
+				  <span class="text-body">Made for free by <span class="header">Jordan Staniscia</span></span>
+					<div>
+						<svg class="icon" xmlns="http://www.w3.org/2000/svg" data-name="square" viewBox="0 0 24 24"><title>square</title><g data-name="Icon/Square"><rect class="square" x="2" y="2" width="20" height="20"/></g></svg>
+		        <svg class="icon"xmlns="http://www.w3.org/2000/svg" data-name="circle" viewBox="0 0 24 24"><title>circle</title><g data-name="Icon/Circle"><circle class="circle" cx="12" cy="12" r="11"/></g></svg>
+		        <svg class="icon" xmlns="http://www.w3.org/2000/svg" data-name="triangle" viewBox="0 0 24 24"></defs><title>triangle</title><g data-name="Icon/Triangle"><polygon class="triangle" points="12 2 24 22 0 22 12 2"/></g></svg>
+					</div>
+			</li>
     </ul>
   </footer>
 
