Footer works at all breakpoints

--- a/index.html
+++ b/index.html
@@ -47,10 +47,12 @@
   <main>
 		<div class="hero">
 			<h1 class="align-center">
-				<span class="text-xxxxl">Work from anywhere.</span><br/>
-				<span class="text-xxxl">Find a new remote job in 2020.</span>
+				<span class="text-xxxxl header">Work from anywhere.</span><br/>
+				<span class="text-xxxl header">Find a new remote job in 2020.</span>
 			</h1>
-			<a class="button-primary">Jump to listings</a>
+			<div class="center">
+				<a href="#" class="button-primary center">Jump to listings</a>
+			</div>
 		</div>
 		<ul id="grid">
 			  <li>
@@ -65,19 +67,20 @@
 
   <footer>
     <ul>
-      <li class="text-body">
+      <li id="about" class="text-body">
 				<p>Remote work is a new tool that allows folks to have a better work-life balance, allow different lifestyles, and spread wealth to communities that have been previously underinvested in. As these opportunities come up, I thought it was important to allow more poeple to find these careers with ease.</p>
 				<p>If you have a remote opportunity at your company, <a href="mailto:jordangetsthisemail@gmail.com">drop me an email</a> and I will try to add your listing in a timely manner.</p>
 			</li>
-      <li>
-				  <span class="text-body">Made for free by <span class="header">Jordan Staniscia</span></span>
-					<div>
+      <li id="signature">
+				  <span class="signature-text text-body">Made for free by <a href="#" class="">@JordanStaniscia</a></span>
+					<div class="personal-logo">
 						<svg class="icon" xmlns="http://www.w3.org/2000/svg" data-name="square" viewBox="0 0 24 24"><title>square</title><g data-name="Icon/Square"><rect class="square" x="2" y="2" width="20" height="20"/></g></svg>
 		        <svg class="icon"xmlns="http://www.w3.org/2000/svg" data-name="circle" viewBox="0 0 24 24"><title>circle</title><g data-name="Icon/Circle"><circle class="circle" cx="12" cy="12" r="11"/></g></svg>
 		        <svg class="icon" xmlns="http://www.w3.org/2000/svg" data-name="triangle" viewBox="0 0 24 24"></defs><title>triangle</title><g data-name="Icon/Triangle"><polygon class="triangle" points="12 2 24 22 0 22 12 2"/></g></svg>
 					</div>
 			</li>
     </ul>
+		<div class="clear"></div>
   </footer>
 
 </body>
