got grid working for desktop sizing

--- a/index.html
+++ b/index.html
@@ -45,19 +45,48 @@
 	</header>
 
   <main>
-		<div class="hero">
-			<h1 class="align-center">
+		<div class="hero flex-down flex-align-center">
+			<h1 class="align-center bottom-24">
 				<span class="text-xxxxl header">Work from anywhere.</span><br/>
 				<span class="text-xxxl header">Find a new remote job in 2020.</span>
 			</h1>
-			<div class="center">
+			<div class="flex">
 				<a href="#" class="button-primary center">Jump to listings</a>
 			</div>
 		</div>
+
 		<ul id="grid">
 			  <li>
 					  <a href="">
-							  <h2>Job name</h2>
+							  <h2 class="text-xl header">Job name</h2>
+								<h3>company</h3>
+								<div class="tag">Full Time</div>
+						</a>
+				</li>
+				<li>
+					  <a href="">
+							  <h2 class="text-xl header">Job name</h2>
+								<h3>company</h3>
+								<div class="tag">Full Time</div>
+						</a>
+				</li>
+				<li>
+					  <a href="">
+							  <h2 class="text-xl header">Job name</h2>
+								<h3>company</h3>
+								<div class="tag">Full Time</div>
+						</a>
+				</li>
+				<li>
+					  <a href="">
+							  <h2 class="text-xl header">Job name</h2>
+								<h3>company</h3>
+								<div class="tag">Full Time</div>
+						</a>
+				</li>
+				<li>
+					  <a href="">
+							  <h2 class="text-xl header">Job name</h2>
 								<h3>company</h3>
 								<div class="tag">Full Time</div>
 						</a>
