bones of the site fully responsive. Next up is content

--- a/index.html
+++ b/index.html
@@ -35,59 +35,64 @@
 					workremote.design
 				</a>
 			</li>
-			<li id="new-listing" class="right text-body">
+			<li id="new-listing" class="right text-body mobile-hide">
 				Want to add your listing here?
-				<a href="mailto:jordangetsthisemail@gmail.com">
+				<a href="mailto:jordangetsthisemail+workremote@gmail.com">
 					Submit new listing
+				</a>
+			</li>
+			<li id="new-listing-mobile" class="right desktop-hide">
+				<a class="icon-link" href="mailto:jordangetsthisemail+workremote@gmail.com">
+					  <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/><path d="M0 0h24v24H0z" fill="none"/></svg>
 				</a>
 			</li>
 		</ul>
 	</header>
 
   <main>
-		<div class="hero flex-down flex-align-center">
+		<div class="hero flex-align-center">
 			<h1 class="align-center bottom-24">
 				<span class="text-xxxxl header">Work from anywhere.</span><br/>
 				<span class="text-xxxl header">Find a new remote job in 2020.</span>
 			</h1>
 			<div class="flex">
-				<a href="#" class="button-primary center">Jump to listings</a>
+				<a href="#grid" class="button-primary center mobile-hide">Jump to listings</a>
 			</div>
 		</div>
 
 		<ul id="grid">
 			  <li>
-					  <a href="">
-							  <h2 class="text-xl header">Job name</h2>
-								<h3>company</h3>
+					  <a href="https://dockyard.com/careers/364195" target="_blank">
+							  <h2 class="text-xl header bottom-12">Director of Design</h2>
+								<h3 class="text-body company-name bottom-12">DockYard</h3>
 								<div class="tag">Full Time</div>
 						</a>
 				</li>
 				<li>
-					  <a href="">
-							  <h2 class="text-xl header">Job name</h2>
-								<h3>company</h3>
+					  <a href="" target="_blank">
+							  <h2 class="text-xl header bottom-12">Job name</h2>
+								<h3 class="text-body company-name bottom-12">company</h3>
 								<div class="tag">Full Time</div>
 						</a>
 				</li>
 				<li>
-					  <a href="">
-							  <h2 class="text-xl header">Job name</h2>
-								<h3>company</h3>
+					  <a href="" target="_blank">
+							  <h2 class="text-xl header bottom-12">Job name</h2>
+								<h3 class="text-body company-name bottom-12">company</h3>
 								<div class="tag">Full Time</div>
 						</a>
 				</li>
 				<li>
-					  <a href="">
-							  <h2 class="text-xl header">Job name</h2>
-								<h3>company</h3>
+					  <a href="" target="_blank">
+							  <h2 class="text-xl header bottom-12">Job name</h2>
+								<h3 class="text-body company-name bottom-12">company</h3>
 								<div class="tag">Full Time</div>
 						</a>
 				</li>
 				<li>
-					  <a href="">
-							  <h2 class="text-xl header">Job name</h2>
-								<h3>company</h3>
+					  <a href="" target="_blank">
+							  <h2 class="text-xl header bottom-12">Job name</h2>
+								<h3 class="text-body company-name bottom-12">company</h3>
 								<div class="tag">Full Time</div>
 						</a>
 				</li>
@@ -98,14 +103,20 @@
     <ul>
       <li id="about" class="text-body">
 				<p>Remote work is a new tool that allows folks to have a better work-life balance, allow different lifestyles, and spread wealth to communities that have been previously underinvested in. As these opportunities come up, I thought it was important to allow more poeple to find these careers with ease.</p>
-				<p>If you have a remote opportunity at your company, <a href="mailto:jordangetsthisemail@gmail.com">drop me an email</a> and I will try to add your listing in a timely manner.</p>
+				<p>If you have a remote opportunity at your company, <a href="mailto:jordangetsthisemail+workremote@gmail.com">drop me an email</a> and I will try to add your listing in a timely manner.</p>
 			</li>
       <li id="signature">
-				  <span class="signature-text text-body">Made for free by <a href="#" class="">@JordanStaniscia</a></span>
+				  <span class="signature-text text-body">Made for free by <a href="https://twitter.com/jordanstaniscia" class="">@JordanStaniscia</a></span>
 					<div class="personal-logo">
-						<svg class="icon" xmlns="http://www.w3.org/2000/svg" data-name="square" viewBox="0 0 24 24"><title>square</title><g data-name="Icon/Square"><rect class="square" x="2" y="2" width="20" height="20"/></g></svg>
-		        <svg class="icon"xmlns="http://www.w3.org/2000/svg" data-name="circle" viewBox="0 0 24 24"><title>circle</title><g data-name="Icon/Circle"><circle class="circle" cx="12" cy="12" r="11"/></g></svg>
-		        <svg class="icon" xmlns="http://www.w3.org/2000/svg" data-name="triangle" viewBox="0 0 24 24"></defs><title>triangle</title><g data-name="Icon/Triangle"><polygon class="triangle" points="12 2 24 22 0 22 12 2"/></g></svg>
+						<a class="icon-link" href="http://jor.dance/">
+							<svg class="icon" xmlns="http://www.w3.org/2000/svg" data-name="square" viewBox="0 0 24 24"><title>square</title><g data-name="Icon/Square"><rect class="square" x="2" y="2" width="20" height="20"/></g></svg>
+						</a>
+						<a class="icon-link" href="https://twitter.com/jordanstaniscia">
+		        	<svg class="icon"xmlns="http://www.w3.org/2000/svg" data-name="circle" viewBox="0 0 24 24"><title>circle</title><g data-name="Icon/Circle"><circle class="circle" cx="12" cy="12" r="11"/></g></svg>
+						</a>
+						<a class="icon-link" href="https://www.instagram.com/jordanscamera/">
+		        	<svg class="icon" xmlns="http://www.w3.org/2000/svg" data-name="triangle" viewBox="0 0 24 24"></defs><title>triangle</title><g data-name="Icon/Triangle"><polygon class="triangle" points="12 2 24 22 0 22 12 2"/></g></svg>
+						</a>
 					</div>
 			</li>
     </ul>
