--- a/index.html
+++ b/index.html
@@ -69,12 +69,76 @@
 						</a>
 				</li>
 				<li>
-					  <a href="" target="_blank">
-							  <h2 class="text-xl header bottom-12">Job name</h2>
-								<h3 class="text-body company-name bottom-12">company</h3>
+					  <a href="https://automattic.com/work-with-us/senior-product-designer/" target="_blank">
+							  <h2 class="text-xl header bottom-12">Senior Product Designer</h2>
+								<h3 class="text-body company-name bottom-12">Automattic</h3>
 								<div class="tag">Full Time</div>
 						</a>
 				</li>
+				<li>
+					  <a href="https://www.shopify.com/careers/ux-manager-polaris-636c5b" target="_blank">
+							  <h2 class="text-xl header bottom-12">UX Manager, Polaris</h2>
+								<h3 class="text-body company-name bottom-12">Shopify</h3>
+								<div class="tag">Full Time</div>
+						</a>
+				</li>
+				<li>
+					  <a href="https://boards.greenhouse.io/outdoorsy/jobs/4448796002" target="_blank">
+							  <h2 class="text-xl header bottom-12">Senior Product Designer</h2>
+								<h3 class="text-body company-name bottom-12">Outdoorsy</h3>
+								<div class="tag">Full Time</div>
+						</a>
+				</li>
+				<li>
+					  <a href="https://www.notion.so/Senior-Product-Designer-00ec5f30cea8461ab54a86ad6f658dcc" target="_blank">
+							  <h2 class="text-xl header bottom-12">Senior Product Designer</h2>
+								<h3 class="text-body company-name bottom-12">Aula</h3>
+								<div class="tag">Full Time</div>
+						</a>
+				</li>
+				<li>
+					  <a href="http://discourse.org/jobs" target="_blank">
+							  <h2 class="text-xl header bottom-12">Designer</h2>
+								<h3 class="text-body company-name bottom-12">Discourse</h3>
+								<div class="tag">Full Time</div>
+						</a>
+				</li>
+				<li>
+					  <a href="https://boards.greenhouse.io/github/jobs/1971138" target="_blank">
+							  <h2 class="text-xl header bottom-12">Senior Product Designer</h2>
+								<h3 class="text-body company-name bottom-12">GitHub</h3>
+								<div class="tag">Full Time</div>
+						</a>
+				</li>
+				<li>
+					  <a href="https://boards.greenhouse.io/github/jobs/2000795" target="_blank">
+							  <h2 class="text-xl header bottom-12">Product Designer</h2>
+								<h3 class="text-body company-name bottom-12">GitHub</h3>
+								<div class="tag">Full Time</div>
+						</a>
+				</li>
+				<li>
+					  <a href="https://auth0.com/careers/job/product-designer:890d09d5-fe99-498d-a438-e97823a16e3e" target="_blank">
+							  <h2 class="text-xl header bottom-12">Product Designer</h2>
+								<h3 class="text-body company-name bottom-12">Auth0</h3>
+								<div class="tag">Full Time</div>
+						</a>
+				</li>
+				<li>
+					  <a href="https://www.toptal.com/careers/growth-designer" target="_blank">
+							  <h2 class="text-xl header bottom-12">Growth Designer</h2>
+								<h3 class="text-body company-name bottom-12">Toptal</h3>
+								<div class="tag">Full Time</div>
+						</a>
+				</li>
+				<li>
+					  <a href="https://www.toptal.com/careers/product-designer" target="_blank">
+							  <h2 class="text-xl header bottom-12">Product Designer</h2>
+								<h3 class="text-body company-name bottom-12">Toptal</h3>
+								<div class="tag">Full Time</div>
+						</a>
+				</li>
+				<!--
 				<li>
 					  <a href="" target="_blank">
 							  <h2 class="text-xl header bottom-12">Job name</h2>
@@ -82,20 +146,7 @@
 								<div class="tag">Full Time</div>
 						</a>
 				</li>
-				<li>
-					  <a href="" target="_blank">
-							  <h2 class="text-xl header bottom-12">Job name</h2>
-								<h3 class="text-body company-name bottom-12">company</h3>
-								<div class="tag">Full Time</div>
-						</a>
-				</li>
-				<li>
-					  <a href="" target="_blank">
-							  <h2 class="text-xl header bottom-12">Job name</h2>
-								<h3 class="text-body company-name bottom-12">company</h3>
-								<div class="tag">Full Time</div>
-						</a>
-				</li>
+				-->
 		</ul>
   </main>
 
